clusters/talos-cluster/litellm/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: litellm-route
  namespace: litellm
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "litellm.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 0s
        backendRequest: 0s
      backendRefs:
        - name: litellm-service
          port: 4000
